hard hw2 done add auth and sessions
